[gd_scene load_steps=2 format=3 uid="uid://ending_screen_001"]

[ext_resource type="Script" path="res://scripts/ui/ending_screen.gd" id="1"]

[node name="EndingScreen" type="CanvasLayer"]
process_mode = 3

[node name="Control" type="Control" parent="." groups=["ending_screen"]]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Overlay" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.15, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleSpacer" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Title" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 1, 1)
theme_override_font_sizes/font_size = 48
text = "VEIL"
horizontal_alignment = 1

[node name="EndingName" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "NOMBRE DEL FINAL"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(800, 250)
layout_mode = 2

[node name="NarrativeText" type="RichTextLabel" parent="Control/CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "El texto narrativo va aquí..."
fit_content = true
scroll_active = false

[node name="Spacer2" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StatsLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Verdades Reveladas: 0 / 0"
horizontal_alignment = 1

[node name="PercentageLabel" type="Label" parent="Control/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Completado: 0%"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="NewGameButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Nueva Partida"

[node name="MenuButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Menú Principal"

[node name="Spacer4" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/NewGameButton" to="Control" method="_on_new_game_button_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/MenuButton" to="Control" method="_on_menu_button_pressed"]
